--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -91,19 +91,26 @@ body{
     display:flex;
     list-style:none;
     flex-wrap:wrap;
+    align-items: center;
+    justify-content:center;
+    gap: 30px 60px;
 }
 
 .ex{    
     margin: 10px 0;
     position:relative;
-    display: flex;
-    flex: 0 0 20%;
+    flex: 0 1 20%;
 
 }
 
+.ex:nth-child(1) {
+    flex: 0 1 40%;
+}
 
-.work-list img{
+
+.ex img{
     border: var(--c1) solid 10px; 
+    width:100%;
 }
 
 .work-list h3{
