--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,134 +1,40 @@
+:root{
+
+    --darkTeal: #4D869C;
+    --midTeal: #7AB2B2;
+    --lightestBlue: #EEF7FF;
+    --lightBlue: #CDE8E5;
+}
+
 *{
-    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    color: var(--c5);
-    
+    margin:0;
+    padding:0;
 }
-
-html {
-    /*Color palette:*/
-    --c1: #0d1b2a;
-    --c2: #1b263b;
-    --c3: #415a77;
-    --c4: #778da9;
-    --c5: #e0e1dd;
-    
-}
-
-/*HEADER*/
 
 header{
-    display:flex;
-    flex-direction: column;
-    background-color: var(--c2);
-    color:white;
     width:100%;
-    justify-content:center;
-    align-items:center;
-    height:100vh;
-    
-}
-
-
-header img{
-    border-radius: 50%;
-    width: 15%;
-
-
+    background-color: var(--darkTeal);
+    color:var(--lightestBlue);
 }
 
 header ul{
-    list-style:none;
-    display:flex;
+    text-align:end;
+    padding-bottom: 20px;
+}
+
+header li{
+    display:inline;
+    margin-right: 20px;
 }
 
 header a{
-    color:white;
-    text-decoration:none;
-    margin: 0 70px;
-    font-size: 200%;
-
+    color:var(--lightestBlue);
 }
 
 header h1{
-    font-size: 500%;
-}
-
-
-/*BODY*/
-
-body{
-    margin:0;
-    padding:0;
-    display:flex;
-    flex-direction:column;
-    align-items:center;
-}
-
-/*CARDS*/
-
-.card{
-    color: var(--c5);
-    margin: 50px 50px;
-    width: 80%;
-    text-align:center;
-    background-color: var(--c3);
-    border-radius: 25px;
-
-    
-}
-
-.card h2{
-    font-size: 200%;
-}
-
-.card a{
-    text-decoration:none;
-}
-
-/*Portfolio Section*/
-
-.work-list{
-    display:flex;
-    list-style:none;
-    flex-wrap:wrap;
-    align-items: center;
-    justify-content:center;
-    gap: 30px 60px;
-}
-
-.ex{    
-    margin: 10px 0;
-    position:relative;
-    flex: 0 1 20%;
+    display:inline;
+    padding: 5px 5px 5px 30px;
+    color: var(--darkTeal);
+    background-color: var(--lightestBlue)
 
 }
-
-.ex:nth-child(1) {
-    flex: 0 1 40%;
-}
-
-
-.ex img{
-    border: var(--c1) solid 10px; 
-    width:100%;
-}
-
-.work-list h3{
-    position:absolute;
-    background-color:var(--c1);
-    min-width: 150px;
-    bottom:30px;
-    left:10px;
-    margin-bottom:0px;
-    border: 5px 0;
-    padding:10px;
-}
-
-
-#forest-keeper::after{
-    content:'C# for Unity';
-    font-size: 50%;
-    display:block;
-}
-
-
