--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -70,7 +70,40 @@ body{
 
 .work-list{
     display:flex;
+    flex-wrap: wrap;
+    justify-content:center;
+    align-items: center;
+    max-width: 800px;
+
 }
+
+.ex{
+    width: 400px;
+    height: 250px;
+    flex: none;
+
+}
+
+.ex img{
+    width:100%;
+    height:100%;
+    object-fit: cover;
+}
+
+#prime{
+    flex-basis: 800px;
+}
+
+
+
+
+
+
+
+
+
+
+
 
 
 
