--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -57,6 +57,8 @@ nav a:hover{
     color:var(--midTeal);
 }
 
+/* HERO */
+
 .hero{
 
     /* Code referenced from: https://www.w3schools.com/howto/howto_css_hero_image.asp */
@@ -76,12 +78,15 @@ nav a:hover{
 
 body{
     background-color: var(--lightestBlue);
-    display:flex;
-    flex-direction:column;
-    justify-content: center;    
+
+
 }
 
-/* HERO */
+.blocks-wrapper{
+    display:flex;
+    flex-direction:column;
+    align-items:start;
+}
 
 
 
@@ -89,17 +94,29 @@ body{
 
 .infoblock{
     position:relative;
-    margin-left: 20%;
     margin-bottom: 100px;
     display:flex;
-    align-items: center;
-    border-left: 5px solid var(--midTeal);
-    padding-left: 25px;
+    align-items: flex-start;
+    margin-left: 30%;
+
+
 
 }
 
-/* INFOBLOCK HEADINGS */
+.contents{
+    padding-left: 10px;
+    border-left: 5px solid var(--darkTeal);
 
+}
+
+.infoblock h2{
+    position:absolute;
+    font-size: 200%;
+    color: var(--darkTeal);
+    left: -200px;
+
+
+}
 
 
 
@@ -108,10 +125,8 @@ body{
 .work-list{
     display:flex;
     flex-wrap: wrap;
-    width: 800px;
+    width: 55%;
     row-gap: 25px;
-    justify-content: center;
-    align-items: center;
 
 }
 
@@ -157,9 +172,18 @@ body{
 /* QUERIES TO RESPOND TO SCREEN SIZE */
 
 @media screen and (max-width: 768px){
-    .work-list, nav{
+    .infoblock h2{
+        position:relative;
+        left:0;
+    }
+    .work-list, nav, .infoblock{
         flex-direction:column;
     }
+    .infoblock{
+        margin-left: 10%;
+    }
+
+
 
 
 
